# duplicate-file-finder

./: .gitignore  dff.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
duplicate_file_finder/: __init__.py  cli.py  config.py  core.py  database.py  dff.py  scanner.py  utils.py
tests/: test_add.py  test_check.py  test_list.py  test_remove.py  test_update.py
