[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duplicate-file-finder"
version = "0.1.0"
description = "A tool to find duplicate files across different mount points"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
